# VarjoXR

./: .gitignore  CMakeLists.txt  CMakePresets.json  README (1).md  README.md  gitignore
cmake/: VarjoXRDependencies.cmake  VarjoXRDxcRuntime.cmake  VarjoXRVarjoRuntime.cmake
doc/: BackendReplacement.md  TestPlan.md
docs/: AsyncRendering.md  FrameInfoSnapshot.md
hlsl/VarjoXR/: TextureProcessing.hlsli
include/VarjoXR/: BackendType.hpp  Eye.hpp  Material.hpp  Math.hpp  ResourceManager.hpp  Texture.hpp  Transform.hpp  VarjoSession.hpp  VarjoXR.hpp  XRObject.hpp  XRPlane.hpp  XRScene.hpp  XRSession.hpp  XRSpace.hpp  XRView.hpp
include/VarjoXR/Backends/: IRenderBackend.hpp
include/VarjoXR/Backends/D3D11/: D3D11Backend.hpp
include/VarjoXR/Backends/D3D12/: D3D12Backend.hpp
include/VarjoXR/Core/: XRMaterial.hpp  XRPlane.hpp  XRSpace.hpp  XRTexture.hpp
include/VarjoXR/Detail/: IRenderBackend.hpp  VarjoLayerSubmit.hpp
include/VarjoXR/Foundation/: AsyncDoubleBuffer.hpp  Eye.hpp  FrameContext.hpp  PlacementMode.hpp  Transform.hpp
samples/: CMakeLists.txt
samples/ProgrammableProcessing/: CMakeLists.txt  ProgrammableProcessingSampleCommon.hpp  ProgrammableProcessing_D3D11.cpp  ProgrammableProcessing_D3D12.cpp  README.md
samples/ProgrammableProcessing/Shaders/: CircleDarkenPreprocess.hlsl
samples/RenderingPlane/: CMakeLists.txt  README.md  RenderingPlane_D3D11.cpp  RenderingPlane_D3D12.cpp
samples/RenderingPlane/01_SinglePlane/: SinglePlane.cpp
samples/RenderingPlane/02_HeadRelativePlane/: HeadRelativePlane.cpp
samples/RenderingPlane/03_StereoPlane/: StereoPlane.cpp
samples/RenderingPlane/04_ShaderPlane/: ShaderPlane.cpp
samples/RenderingPlane/05_MultiplePlanes/: MultiplePlanes.cpp
samples/RenderingPlane/06_ProcessingPlane/: ProcessingPlane.cpp
samples/RenderingPlane/07_EyeMaterialVariants/: EyeMaterialVariants.cpp
samples/RenderingPlane/08_NativeTexturePlane/: NativeTexturePlane.cpp
samples/RenderingPlane/Common/: RenderingPlaneSampleCommon.hpp
src/: ResourceManager.cpp  Transform.cpp  VarjoSession.cpp  XRObject.cpp  XRPlane.cpp  XRScene.cpp  XRSession.cpp  XRSpace.cpp  XRView.cpp
src/Backends/D3D11/: D3D11Backend.cpp  D3D11BackendExternalFrameInfo.cpp
src/Backends/D3D12/: D3D12Backend.cpp  D3D12BackendExternalFrameInfo.cpp
src/Core/: XRPlane.cpp  XRSpace.cpp
src/Detail/: VarjoLayerSubmit.cpp
src/Foundation/: Transform.cpp
tests/: CMakeLists.txt  VarjoXRBackendSmokeTests.cpp  VarjoXRCoreTests.cpp  VarjoXRShaderLinkageTests.cpp
